# OOP-lab3

./: CMakeLists.txt  README.md
include/: figure.hpp  figure_array.hpp  figure_vector.hpp  point.hpp  rectangle.hpp  square.hpp  trapezoid.hpp
src/: figure.cpp  figure_array.cpp  figure_vector.cpp  point.cpp  rectangle.cpp  square.cpp  trapezoid.cpp
tests/: test_figures.cpp
